# edat

./: .gitignore  Cargo.toml  DatesAndTimes.md  README.md  ReleaseChecklist.md  Todo.md  build.bat  index.json  limits.md  paster.html
src/: data.rs  data_new.rs  html.rs  image.rs  main.rs  routes.rs  search.rs
src/data/: comments.rs  entry.rs  history.rs  index.rs  mod.rs  music.rs  section.rs  user.rs  volume.rs
src/data_new/: comments.rs  entry.rs  history.rs  index.rs  section.rs  user.rs  volume.rs
src/html/: cmd.rs  mod.rs  widgets.rs  wrappers.rs
src/html/components/: mod.rs  search.rs
src/html/pages/: entry.rs  forum.rs  history.rs  home.rs  mod.rs  music.rs  profile.rs  search.rs  volume.rs
src/routes/: auth.rs  cmd.rs  components.rs  delete.rs  files.rs  mod.rs  pages.rs  post.rs  user.rs
src/routes/components/: mod.rs  search.rs
src/routes/pages/: home.rs  mod.rs
static/scripts/: entry.ts  home.ts  library.ts  login.js  login.ts  music.ts  profile.ts  search.ts  setup.js  setup.ts  standard.ts  terminal.ts  tsconfig.json  universal.js  universal.ts  volume.ts  widgets.ts
static/styles/: entry.css  fiction_entry.css  history.css  home.css  library.css  login.css  mir.css  missing_id.css  music.css  profile.css  review.css  search.css  setup.css  standard.css  terminal.css  universal.css  volume.css
