[package]
name = "edat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
indexmap = "2.2.6"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }

