[package]
name = "edat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["now"] }
indexmap = "2.2.6"
maud = { version = "0.26.0", features = ["axum"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
zip = "2.1.1"

