[package]
name = "edat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["now"] }
openssl = { version = "0.10", features = ["vendored"] }
image-builder = "1.0.0"
indexmap = "2.2.6"
levenshtein = "1.0.5"
maud = { version = "0.26.0", features = ["axum"] }
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.5", features = ["json"] }
roman = "0.1.6"
rust-stemmers = "1.2.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
zip = "2.1.1"

